# atlas-bookmaker

./: .env.example  .gitignore  DOCTRINE.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
agent/: __init__.py  main.py
agent/prompts/: __init__.py  system_v2.yaml
agent/tools/: __init__.py  brand_gate.py  compose.py  image_extract.py  pdf_parse.py  speech_in.py  strict_input_check.py
corpus/: README.md
corpus/schemas/: deal_highlights.schema.json  pair.schema.json
corpus/scripts/: 01_extract_marketing.py  02_flip_cre_to_strict_input.py  03_bookmaker_grinder.py  04_reit_listing_extract.py  05_merge_dedup.py  06_strict_input_audit.py  07_think_tag_scan.py  08_emit_hivecells.py
deploy/: anchor.sh  api_route.py  vllm_serve.sh
docs/: GRANITE_BEE.md  HARVEY_MATH.md  PIPELINE.md  ROLE.md
eval/: README.md  score.py
eval/prompts/: ship_eval_100.jsonl
recipes/: recipe_4_8b_hack_granite.md
tests/: test_strict_input.py
train/: cook_auditor.sh  smoke.py  train_bookmaker_v2.py
